# scrapers

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  publish.yml  tests.yml
boatrace/models/: __init__.py  disqualification.py  motor_parts.py  prefecture.py  race_grade.py  racer_rank.py  weather.py  winning_trick.py
boatrace/official/: exceptions.py  models.py
boatrace/official/v1707/monthly_schedule_page/: scraping.py
boatrace/official/v1707/monthly_schedule_page/tests/: test_scraping.py
boatrace/official/v1707/pages/pre_inspection_information_page/tests/fixtures/: 20151112_23#.html
boatrace/official/v1707/pages/race/: common.py
boatrace/official/v1707/pages/race/before_information_page/: scraping.py
boatrace/official/v1707/pages/race/entry_page/: scraping.py
boatrace/official/v1707/pages/race/result_page/: scraping.py
boatrace/official/v1707/pages/racer/profile_page/: scraping.py
boatrace/official/v1707/pre_inspection_information_page/: scraping.py
boatrace/official/v1707/pre_inspection_information_page/tests/: test_scraping.py
boatrace/official/v1707/pre_inspection_information_page/tests/fixtures/: 20191218_12#.html
boatrace/official/v1707/race/before_information_page/: scraping.py
boatrace/official/v1707/race/before_information_page/tests/: test_scraping.py
boatrace/official/v1707/race/entry_page/: scraping.py
boatrace/official/v1707/race/entry_page/tests/: test_scraping.py
boatrace/official/v1707/race/odds/trifecta_page/: scraping.py
boatrace/official/v1707/race/odds/trifecta_page/tests/: test_scraping.py
boatrace/official/v1707/race/result_page/: scraping.py
boatrace/official/v1707/race/result_page/tests/: test_scraping.py
boatrace/official/v1707/racer/profile_page/: scraping.py
boatrace/official/v1707/racer/profile_page/tests/: test_scraping.py
boatrace/official/v1707/scrapers/: boat_performance.py  boat_settings.py  circumference_exhibition_records.py  decorators.py  event.py  event_entries.py  motor_performance.py  odds.py  race_entries.py  race_exhibition_records.py  race_information.py  race_payoff.py  race_records.py  racer_conditions.py  racer_profile.py  start_exhibition_records.py  utils.py  weather_conditions.py
boatrace/official/v1707/scrapers/tests/: test_boat_performance.py  test_boat_settings.py  test_circumference_exhibition_records.py  test_event.py  test_event_entries.py  test_motor_performance.py  test_odds.py  test_race_entries.py  test_race_information.py  test_race_payoff.py  test_race_records.py  test_racer_conditions.py  test_racer_profile.py  test_start_exhibition_records.py  test_weather_conditions.py
boatrace/official/v1707/scrapers/tests/fixtures/monthly_schedule/: 2016_03_14#.html
boatrace/official/v1707/scrapers/tests/fixtures/race_information/: 20151016_08#_2R.html  20151116_03#_11R.html  20180301_15#_12R.html
boatrace/official/v1707/scrapers/tests/fixtures/racer_profile/: 4444.html
metaboatrace/scrapers/official/website/: exceptions.py
metaboatrace/scrapers/official/website/v1707/: decorators.py  factories.py  utils.py
metaboatrace/scrapers/official/website/v1707/pages/event_holding_page/: scraping.py
metaboatrace/scrapers/official/website/v1707/pages/monthly_schedule_page/: scraping.py
metaboatrace/scrapers/official/website/v1707/pages/pre_inspection_information_page/: scraping.py
metaboatrace/scrapers/official/website/v1707/pages/race/: common.py  utils.py
metaboatrace/scrapers/official/website/v1707/pages/race/before_information_page/: scraping.py
metaboatrace/scrapers/official/website/v1707/pages/race/entry_page/: scraping.py
metaboatrace/scrapers/official/website/v1707/pages/race/odds/trifecta_page/: scraping.py
metaboatrace/scrapers/official/website/v1707/pages/race/result_page/: scraping.py
metaboatrace/scrapers/official/website/v1707/pages/racer/profile_page/: scraping.py
tests/metaboatrace/scrapers/official/website/v1707/: test_factories.py
tests/metaboatrace/scrapers/official/website/v1707/pages/event_holding/: test_scraping.py
tests/metaboatrace/scrapers/official/website/v1707/pages/event_holding_page/: test_scraping.py
tests/metaboatrace/scrapers/official/website/v1707/pages/event_holding_page/fixtures/: 2026_07_06_presale_only.html
tests/metaboatrace/scrapers/official/website/v1707/pages/monthly_schedule_page/: test_scraping.py
tests/metaboatrace/scrapers/official/website/v1707/pages/monthly_schedule_page/fixtures/: 2015_11.html
tests/metaboatrace/scrapers/official/website/v1707/pages/pre_inspection_information_page/: test_scraping.py
tests/metaboatrace/scrapers/official/website/v1707/pages/race/common/: test_extract_weather_condition_base_data.py
tests/metaboatrace/scrapers/official/website/v1707/pages/race/entry_page/: test_location.py  test_scraping.py
tests/metaboatrace/scrapers/official/website/v1707/pages/race/result_page/: test_scraping.py
tests/metaboatrace/scrapers/official/website/v1707/pages/racer/profile_page/: test_location.py  test_scraping.py
(+19 files in other folders)
