[project]
name = "metaboatrace.scrapers"
version = "3.4.0"
description = "Scrapers for Japanese boatrace websites"
authors = [
    { name = "k0kishima", email = "okishimaxyz@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "metaboatrace.models>=2.4.0",
    "numpy>=1.25.2",
    "pytz>=2023.3.post1",
    "types-pytz>=2023.3.1.1",
]
readme = "README.md"
requires-python = ">= 3.13"
license = "MIT"

[dependency-groups]
dev = [
    "mypy>=1.4.1",
    "pre-commit>=4.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
explicit_package_bases = true
# 型注釈未整備のため除外（スクレイピング処理は動的型が多くmypy対応が困難）
exclude = [
    "metaboatrace/scrapers/official/website/v1707/decorators.py",
    "metaboatrace/scrapers/official/website/v1707/pages/",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "RUF001", # String contains ambiguous unicode character
    "RUF002", # Docstring contains ambiguous unicode character
    "RUF003", # Comment contains ambiguous unicode character
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests",]
